# MachiKoro

./: Bank.cpp  Bank.h  Banque.cpp  Banque.h  CMakeLists.txt  Cards.cpp  Cards.h  Cards_blue.cpp  Cards_blue.h  Cartes.cpp  Cartes.h  Cartes_bleu.cpp  Cartes_bleu.h  Cartes_jaune.cpp  Cartes_jaune.h  Cartes_rouge.cpp  Cartes_rouge.h  Cartes_vert.cpp  Cartes_vert.h  Cartes_violet.cpp  Cartes_violet.h  ColorAndIcon.h  Deck.cpp  Deck.h  Jeu.cpp  Jeu.h  LICENSE  MachiKoro.cpp  README.md  singleton.h
